--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
+		<h2>Related Projects</h2>
+		<p>
+		<ul>
+		<li><a href="https://github.com/lisaglendenning/zookeeper-jackson">zookeeper-jackson</a></li>
+		<li><a href="https://github.com/lisaglendenning/zookeeper-clients">zookeeper-clients</a></li>
+		<li><a href="https://github.com/lisaglendenning/zookeeper-proxy">zookeeper-proxy</a></li>
+		</ul>
+		</p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
