--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
         <div id="title">
           <h1>ZooKeeper-Lite</h1>
           <p>A &quot;lite&quot; implementation of both the server and client ZooKeeper protocol.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/lisaglendenning">lisaglendenning</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
 		<h2>Related Projects</h2>
@@ -48,6 +45,11 @@
 		<li><a href="https://github.com/lisaglendenning/zookeeper-proxy">zookeeper-proxy</a></li>
 		</ul>
 		</p>
+		
+        <hr>
+        <span class="credits left">Project maintained by <a href="https://github.com/lisaglendenning">lisaglendenning</a></span>
+        <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/mattgraham">mattgraham</a></span>
+		
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
